test/files/neg/t1371.scala
//> using options -Yrangepos
trait A[T <: (_)]

